--- a/project.es.ipynb
+++ b/project.es.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "4eca514d",
       "metadata": {},
       "outputs": [],
@@ -31,7 +31,7 @@
         "nombre = \"Adrián\"\n",
         "edad = 36\n",
         "programacion = True\n",
-        "Calificacion = 7.34"
+        "calificacion = 7.34"
       ]
     },
     {
@@ -1056,12 +1056,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "nuclear-belief",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El precio medio de las casas de Arroyomolinos (Madrid) es de 294541.6 €\n"
+          ]
+        }
+      ],
       "source": [
-        "# TODO"
+        "# TODO\n",
+        "import pandas as pd\n",
+        "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+        "ds_arroyomolinos = ds[ds[\"level5\"] == \"Arroyomolinos (Madrid)\"]\n",
+        "media_precios = round(ds_arroyomolinos[\"price\"].mean(), 2)\n",
+        "print(f\"El precio medio de las casas de Arroyomolinos (Madrid) es de {media_precios} €\")"
       ]
     },
     {
