--- a/project.es.ipynb
+++ b/project.es.ipynb
@@ -1090,14 +1090,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "sudden-message",
       "metadata": {},
       "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Trazar el histograma de precios"
+        "# Trazar el histograma de precios\n",
+        "import pandas as pd\n",
+        "ds = pd.read_csv('assets/real_estate.csv', sep=';')\n",
+        "ds_arroyomolinos = ds[ds[\"level5\"] == \"Arroyomolinos (Madrid)\"]\n",
+        "\n",
+        "\n"
       ]
     },
     {
